# datm-research

./: README.md
android_file_transfer/: Dockerfile  README.md  __init__.py  main.py  pyproject.toml
aoi_to_flightplans/: .gitignore  README.md  aoi_to_squares.py  bobo.geojson  pyproject.toml  wpml_generator.py
db_design/: CHANGELOG.md  DroneTM-v1.sql  DroneTM-v2.sql  DroneTM-v3.sql  README.md
electric-sql/: README.md
flight_control/: dji.md
flight_control/WPML_templates/: Additional_waypoint_template.wpml  First_waypoint_template.wpml  Global_settings_template.wpml
flight_control/dji/: README.md  dji.md  template.kml  waylines.wpml
flight_renamer/: README.md  bbox.geojson  main.py  pyproject.toml
push_notifications/: README.md
task_splitter/: README.md  generate_hexagon_grid.sql  generate_hexagons_v1.sql  generate_hexagons_v2.sql
weather_data/: README.md
